# school_erp_product

./: .env.example  .gitignore  .prettierignore  AGENTS.md  School_ERP_Architecture_v1.md  Shared_Platform_Capabilities_v3.md  eslint.config.js  package.json  phase1-architecture.md  platform_capabilities.md  pnpm-lock.yaml
backend/: .env.example  README.md  alembic.ini  main.py  pyproject.toml
backend/business/fees/: dependencies.py  manifest.py
backend/business/homework/: dependencies.py  manifest.py
backend/business/tenant_institution/: casbin_model.conf  dependencies.py  manifest.py  policies.py
backend/kernel/: app_factory.py  audit.py  db.py  middleware.py  repo_base.py  tenant_context.py
backend/kernel/auth/: __init__.py  bootstrap.py  dependencies.py  manifest.py  supabase_client.py
backend/kernel/authz/: __init__.py  dependencies.py  manifest.py
backend/kernel/tenant_institution/: dependencies.py  manifest.py  policies.py
backend/kernel/user/: dependencies.py  manifest.py  policies.py
backend/migrations/: env.py
backend/migrations/versions/: 001_c01_initial.py  (+5 more)
backend/scripts/: seed_data.py
backend/tests/: conftest.py  fake_supabase_auth.py  test_api.py  test_app_factory.py  test_audit_emission.py  test_boundary_declarations.py  test_c02_user.py  test_c03_auth.py  test_c04_authz.py  test_casbin_permissions.py  test_configurable_enums.py  test_fees.py  test_field_purity.py  test_import_contracts.py  test_lifecycle.py  test_org_unit_hierarchy.py  test_repos.py  test_rls.py  test_template.py  test_transfer.py  test_uuid_pks.py
(+292 files in other folders)
